[BUG]: Fixed some alignment and mobile issues

--- a/css/Navbar.module.css
+++ b/css/Navbar.module.css
@@ -1,9 +1,9 @@
 .wrapper{
+    --nav-padding: 20em;
     background-color: var(--NavBG);
     width: 100%;
-    height: 80px;
+    height: var(--NavHeight);
     color: var(--NavText);
-    --nav-padding: 16em;
 }
 
 .container{
@@ -17,33 +17,52 @@
     cursor: pointer;
     width: fit-content;
     height: fit-content;
-    font-size: 1.2rem;
+    color: var(--NavBGSecondary);
+    font-size: 3.5em;
     font-weight: 900;
-    padding-left: var(--nav-padding);
+    padding-left: 2em;
+    grid-column-start: 1;
+    grid-column-end: 2;
 }
 
 .items{
     display: flex;
     flex-direction: row;
-    gap: 2rem;
+    color: var(--NavBGSecondary);
+    font-size: 2em;
+    gap: 2em;
     height: 100%;
     grid-column-start: 3;
     grid-column-end: 4;
     margin: auto;
-    padding-right: var(--nav-padding);
 }
 
 .items *{
     margin: auto 0;
-    width:fit-content;
     list-style: none;
+    display: inline-block;
     cursor: pointer;
+    position: relative;
+    color: var(--NavBGSecondary);
 }
 
-.items *:hover{
-    text-decoration: underline;
-    text-decoration-color: var(--nav-bg-light);
-    text-decoration-thickness: 2px;
+.items *::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: .1em;
+    bottom: 0;
+    left: 0;
+    background-color: var(--NavBGSecondary);
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.items *:hover::after,
+.items *:focus::after{
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
 
 .items *:first-child{
@@ -54,11 +73,20 @@
     display: none;
 }
 
-@media only screen and (max-width: 1800px) and (min-width: 601px) {
+.line{
+    display:none;
+}
+
+@media only screen and (max-width: 1800px) and (min-width: 701px) {
+    .container{
+        font-size: .8em;
+    }
+
     .items{
         padding-right: 1em;
-        font-size: .6em;
+        font-size: 2em;
         gap:2em;
+        margin:0;
     }
 
     .items *{
@@ -70,27 +98,39 @@
     }
 
     .logo{
-        padding-left: .1em;
+        font-size: 3.5em;
+        padding-left: 1em;
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
     .container{
-        display:block;
+        display: block;
+        height: var(--NavHeight);
+        --hamNavPadding: 32px;
+        grid-template-columns: auto 1fr;
+    }
+
+    .lineShow{
+        z-index: 100;
+        display: block;
+        margin: 0;
+        color: var(--NavBGSecondary);
+        width: 100%;
     }
 
     .logo{
-        width: fit-content;
-        margin: 0;
-        padding-left: 1em;
+        margin: auto 0;
+        font-size: 3em;
+        padding-left: calc(var(--hamNavPadding) / 2);
     }
 
     .hamburgerMenu{
         --bar-height: 6px;
         --bar-width: 60px;
         --hamburger-gap: 6px;
-        --foreground: #333;
-        --background: white;
+        --foreground: blue;
+        --background: var(--NavBGSecondary);
         --hamburger-margin: 15px;
         --animation-timing: 200ms ease-in-out;
         --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
@@ -99,12 +139,11 @@
         display: flex;
         flex-direction: column;
         gap: var(--hamburger-gap);
-        padding: 0 var(--center-site-gap);
         width: max-content;
         position: absolute;
         top: var(--hamburger-margin);
         right: var(--hamburger-margin);
-        z-index: 2;
+        z-index: 10;
         cursor: pointer;
     }
 
@@ -114,7 +153,7 @@
         content: "";
         width: var(--bar-width);
         height: var(--bar-height);
-        background-color: var(--nav-text);
+        background-color: var(--background);
         border-radius: 9999px;
         transform-origin: left center;
         transition: opacity var(--animation-timing), width var(--animation-timing), translate var(--animation-timing), rotate var(--animation-timing), background-color var(--animation-timing);
@@ -137,36 +176,36 @@
         rotate: 45deg;
         width: var(--x-width);
         translate: 0 calc(var(--bar-height) / -2);
-        background-color: var(--nav-bg-light);
+        background-color: var(--background);
     }
 
     .hamburgerMenu.checked::after{
         rotate: -45deg;
         width: var(--x-width);
         translate: 0 calc(var(--bar-height) / 2);
-        background-color: var(--nav-bg-light);
+        background-color: var(--background);
     }
 
     .items.checked{
-        translate: 0;
+        display: flex;
+        translate: 0 (var(--NavHeight));
     }
 
     .items{
         translate: -100%;
-        padding-left: 1em;
+        padding-left: var(--hamNavPadding);
         position: relative;
-        display: flex;
+        display: none;
         flex-direction: column;
         gap:.5em;
-        background-color: var(--nav-bg);
         height: fit-content;
-        width: 100%;
-        padding-top: calc(var(--hamburger-height) + var(--hamburger-margin) + 2em);
+        padding-top: 12px;
+        background-color: var(--NavBG);
     }
 
     .items *{
-        background-color: inherit;
         text-decoration: underline;
+        background-color: inherit;
         width:max-content;
     }
 
@@ -175,6 +214,6 @@
     }
 
     .items:last-child{
-        padding-bottom: .5rem;
+        padding-bottom: 1em;
     }
 }
